@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016-2020 Javier Llorente <javier@opensuse.org>
+ * Copyright (C) 2016-2025 Javier Llorente <javier@opensuse.org>
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,10 +16,10 @@
 package com.javierllorente.jobs.test;
 
 import com.javierllorente.jobs.OBS;
-import com.javierllorente.jobs.entity.OBSPrjMetaConfig;
-import com.javierllorente.jobs.entity.OBSRequest;
+import com.javierllorente.jobs.entity.OBSEntry;
+import com.javierllorente.jobs.entity.OBSProject;
 import com.javierllorente.jobs.entity.OBSStatus;
-import java.net.URL;
+import java.net.URI;
 import java.util.List;
 import org.junit.After;
 import org.junit.AfterClass;
@@ -35,7 +35,7 @@ import static org.junit.Assert.*;
 public class OBSTest {
     
     private static OBS obs;
-    final static String API_URL = "https://api.opensuse.org/";
+    final static String API_URI = "https://api.opensuse.org/";
     
     public OBSTest() {
     }    
@@ -43,8 +43,8 @@ public class OBSTest {
     @BeforeClass
     public static void setUpClass() throws Exception {
         obs = new OBS();
-        URL apiUrl = new URL(API_URL);
-        obs.setApiUrl(apiUrl);
+        URI apiUri = new URI(API_URI);
+        obs.setApiUri(apiUri);
         obs.setUsername("");
         obs.setPassword("");
         obs.authenticate();
@@ -66,45 +66,32 @@ public class OBSTest {
      * Test of getBuildStatus method, of class OBS.
      */
     @Test
-    public void testGetBuildStatus() throws Exception {
-        System.out.println("getBuild");
+    public void testGetBuildStatus() {
         String project = "openSUSE:Factory";
         String repository = "standard";
         String architecture = "x86_64";
         String build = "kernel-source";
         OBSStatus status = obs.getBuildStatus(project, repository, architecture, build);
-        assertNotNull(status);
-    }
-
-    /**
-     * Test of getIncomingRequests method, of class OBS.
-     */
-    @Test
-    public void testGetIncomingRequests() throws Exception {
-        System.out.println("getRequests");
-        List<OBSRequest> result = obs.getIncomingRequests();
-        assertNotNull(result);
+        assertNotNull(status.getCode());
     }
 
     /**
      * Test of getProjectList method, of class OBS.
      */
     @Test
-    public void testGetProjectList() throws Exception {
-        System.out.println("getProjectList");
-        List<String> result = obs.getProjectList(true);
-        assertNotNull(result);
+    public void testGetProjectList() {
+        List<OBSEntry> result = obs.getProjects().getEntries();
+        assertFalse(result.isEmpty());
     }
 
     /**
      * Test of getPackageList method, of class OBS.
      */
     @Test
-    public void testGetPackageList() throws Exception {
-        System.out.println("getPackageList");
+    public void testGetPackageList() {
         String projectName = "KDE:Extra";
-        List<String> result = obs.getPackages(projectName);
-        assertNotNull(result);
+        List<OBSEntry> result = obs.getPackages(projectName).getEntries();
+        assertFalse(result.isEmpty());
 
     }
 
@@ -112,9 +99,8 @@ public class OBSTest {
      * Test of getProjectMetaConfig method, of class OBS.
      */
     @Test
-    public void testGetProjectMetaConfig() throws Exception {
-        System.out.println("getProjectMetaConfig");
-        OBSPrjMetaConfig prjMetaConfig = obs.getProjectMetaConfig("KDE:Extra");
+    public void testGetProjectMetaConfig() {
+        OBSProject prjMetaConfig = obs.getProjectMetaConfig("KDE:Extra");
         assertFalse(prjMetaConfig.getName().isEmpty());
     }
     
